--- a/project/client/templates/footer.html
+++ b/project/client/templates/footer.html
@@ -1,7 +1,5 @@
-<footer>
+<footer class="footer">
   <div class="container">
-    <small>
-      <span>© <a href="http://mherman.org">Michael Herman</a></span>
-    </small>
+    <small><span class="text-muted">© <a href="http://mherman.org">Michael Herman</a></span></small>
   </div>
 </footer>
