--- a/project/client/static/main.css
+++ b/project/client/static/main.css
@@ -1,5 +1,17 @@
 /* custom css */
 
-.site-content {
-  padding-top: 75px;
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  padding-top: 2rem;
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
 }
