--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -2,9 +2,34 @@
 
 {% block content %}
 
-<div class="body-content">
-  <div class="row">
-    <h1>Welcome!</h1>
+<div class="starter-template">
+    <h1>Flask + Redis Queue + Docker</h1>
+    <hr><br>
+    <div>
+      <h3>Tasks</h3>
+      <p>Pick a task length...</p>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-primary" data-type="1">Short</a>
+        <button type="button" class="btn btn-primary" data-type="2">Medium</a>
+        <button type="button" class="btn btn-primary" data-type="3">Long</a>
+      </div>
+    </div>
+    <br><br>
+    <div>
+      <h3>Task Status</h3>
+      <br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Status</th>
+            <th>Result</th>
+          </tr>
+        </thead>
+        <tbody id="tasks">
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 
