--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -3,13 +3,13 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Flask + Redis Queue + Docker{% block title %}{% endblock %}</title>
+    <title>Demo Webpage using Flask Docker and Redis{% block title %}{% endblock %}</title>
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- styles -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    {{ bootstrap.load_css() }}
     <link href="{{url_for('static', filename='main.css')}}" rel="stylesheet" media="screen">
     {% block css %}{% endblock %}
   </head>
@@ -22,14 +22,6 @@
     </div>
 
     {% include 'footer.html' %}
-
-    <!-- scripts -->
-    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="{{url_for('static', filename='main.js')}}" type="text/javascript"></script>
-    {% block js %}{% endblock %}
-
   </body>
 
 </html>
